tests/should_succeed/unreachable_after_return.jou
cdecl puts(s: byte*) -> int

def main() -> int:
    puts("hey1")  # Output: hey1
    return 0
    puts("hey2")  # Warning: this code will never run
