tests/should_fail/function_wrong_n_args.jou
cdecl getchar() -> int

def main() -> void:
    getchar('m')  # Error: function "getchar" takes 0 arguments, but it was called with 1 argument
    return
